[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="QuestionLabel" type="Label" parent="."]
margin_right = 688.0
margin_bottom = 166.0

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 962.0
margin_top = 49.0
margin_right = 1097.0
margin_bottom = 96.0

[node name="PC1_IP_Input" type="LineEdit" parent="."]
margin_left = 49.0
margin_top = 209.0
margin_right = 350.0
margin_bottom = 265.0
text = "IP ADDRESS"

[node name="PC1_Subnet_Input" type="LineEdit" parent="."]
margin_left = 51.0
margin_top = 283.0
margin_right = 349.0
margin_bottom = 337.0
text = "SM"

[node name="PC1_Gateway_Input" type="LineEdit" parent="."]
margin_left = 48.0
margin_top = 353.0
margin_right = 344.0
margin_bottom = 403.0
text = "GW"

[node name="PC1_DNS1_Input" type="LineEdit" parent="."]
margin_left = 51.0
margin_top = 425.0
margin_right = 345.0
margin_bottom = 481.0
text = "DNS 1"

[node name="PC1_DNS2_Input" type="LineEdit" parent="."]
margin_left = 52.0
margin_top = 502.0
margin_right = 351.0
margin_bottom = 558.0
text = "DNS 2"

[node name="PC2_IP_Input" type="LineEdit" parent="."]
margin_left = 876.0
margin_top = 186.0
margin_right = 1196.0
margin_bottom = 248.0
text = "IP ADDRESS"

[node name="PC2_Subnet_Input" type="LineEdit" parent="."]
margin_left = 882.0
margin_top = 268.0
margin_right = 1191.0
margin_bottom = 330.0
text = "SM"

[node name="PC2_Gateway_Input" type="LineEdit" parent="."]
margin_left = 877.0
margin_top = 346.0
margin_right = 1195.0
margin_bottom = 403.0
text = "GW"

[node name="PC2_DNS1_Input" type="LineEdit" parent="."]
margin_left = 879.0
margin_top = 419.0
margin_right = 1201.0
margin_bottom = 475.0
text = "DNS 1"

[node name="PC2_DNS2_Input" type="LineEdit" parent="."]
margin_left = 874.0
margin_top = 497.0
margin_right = 1208.0
margin_bottom = 560.0
text = "DNS 2"

[node name="Ether_IP_Input" type="LineEdit" parent="."]
margin_left = 468.0
margin_top = 189.0
margin_right = 758.0
margin_bottom = 251.0
text = "IP ETHER"

[node name="Ether_Gateway_Input" type="LineEdit" parent="."]
margin_left = 467.0
margin_top = 279.0
margin_right = 757.0
margin_bottom = 337.0
text = "GW ETHER"

[node name="SubmitButton" type="Button" parent="."]
margin_left = 526.0
margin_top = 557.0
margin_right = 711.0
margin_bottom = 624.0
text = "tombol"

[connection signal="pressed" from="SubmitButton" to="." method="_on_SubmitButton_pressed"]
